src/test/ui/const-generics/generic_const_exprs/from-sig-fail.stderr
error[E0080]: evaluation of `test::<0_usize>::{constant#0}` failed
  --> $DIR/from-sig-fail.rs:4:35
   |
LL | fn test<const N: usize>() -> [u8; N - 1] {
   |                                   ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error: failed to evaluate the given constant
  --> $DIR/from-sig-fail.rs:10:5
   |
LL |     test::<0>();
   |     ^^^^^^^^^
   |
note: required by a bound in `test`
  --> $DIR/from-sig-fail.rs:4:35
   |
LL | fn test<const N: usize>() -> [u8; N - 1] {
   |                                   ^^^^^ required by this bound in `test`

error: failed to evaluate the given constant
  --> $DIR/from-sig-fail.rs:10:5
   |
LL |     test::<0>();
   |     ^^^^^^^^^^^
   |
note: required by a bound in `test`
  --> $DIR/from-sig-fail.rs:4:35
   |
LL | fn test<const N: usize>() -> [u8; N - 1] {
   |                                   ^^^^^ required by this bound in `test`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
